# q27

./: CMakeLists.txt
src/cpp/: Board.hpp  action.h  coronal2.cpp  filewriter.cpp  filewriter.h
